@@ -82,9 +82,11 @@
     <http.component.version>4.2.5</http.component.version>
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.5</slf4j.version>
-    <tephra.version>0.2.1</tephra.version>
+    <tephra.version>0.3.0</tephra.version>
     <thrift.version>0.9.0</thrift.version>
     <jline.version>2.12</jline.version>
+    <commons.version>1.4.1</commons.version>
+    <iocommons.version>2.1</iocommons.version>
     <twill.version>0.4.0-incubating-SNAPSHOT</twill.version>
   </properties>
 
@@ -96,17 +98,17 @@
         <version>${nettyhttp.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.continuuity.tephra</groupId>
+        <groupId>co.cask.tephra</groupId>
         <artifactId>tephra-core</artifactId>
         <version>${tephra.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.continuuity.tephra</groupId>
+        <groupId>co.cask.tephra</groupId>
         <artifactId>tephra-hbase-compat-0.94</artifactId>
         <version>${tephra.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.continuuity.tephra</groupId>
+        <groupId>co.cask.tephra</groupId>
         <artifactId>tephra-hbase-compat-0.96</artifactId>
         <version>${tephra.version}</version>
       </dependency>
@@ -124,6 +126,16 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
         <version>${http.component.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>${commons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${iocommons.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
@@ -807,6 +819,124 @@
       </build>
     </profile>
 
+    <!-- Profile for generating coverage report -->
+    <profile>
+      <id>coverage</id>
+      <properties>
+        <jacoco.version>0.7.1.201405082137</jacoco.version>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.14.1</version>
+              <configuration>
+                <argLine>${argLine} -Xmx4096m -Djava.awt.headless=true -XX:MaxPermSize=256m</argLine>
+              </configuration>
+            </plugin>
 
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>${jacoco.version}</version>
+              <executions>
+                <execution>
+                  <id>prepare-agent</id>
+                  <goals>
+                    <goal>prepare-agent</goal>
+                  </goals>
+                  <configuration>
+                    <excludes>
+                      <exclude>**/thrift/*</exclude>
+                    </excludes>
+                  </configuration>
+                </execution>
+                <execution>
+                  <id>report</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                    <goal>report</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.version}</version>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
+
+
+  <!-- Site reporting section -->
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.7</version>
+        <reportSets>
+          <reportSet>
+            <reports/>
+          </reportSet>
+          <reportSet>
+            <id>site</id>
+            <reports>
+              <report>index</report>
+              <report>mailing-list</report>
+              <report>scm</report>
+              <report>issue-tracking</report>
+              <report>project-team</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <configuration>
+          <stylesheetfile>tigon-distribution/src/javadoc/stylesheet.css</stylesheetfile>
+          <links>
+            <link>http://download.oracle.com/javase/6/docs/api/</link>
+          </links>
+          <doctitle>${project.name} ${project.version}</doctitle>
+          <bottom>
+            <![CDATA[Copyright &#169; {currentYear} <a href="http://cask.co" target="_blank">Cask Data, Inc.</a> Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License, Version 2.0</a>.]]>
+          </bottom>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+          <reportSet>
+            <id>aggregate</id>
+            <inherited>false</inherited>
+            <reports>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.14.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
 </project>
